# sfml-space-invaders

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SpaceInvaders.proj.DotSettings
.github/workflows/: ci.yml
Artworks/: SpaceInvaders.afdesign
Assets/: LayeredSprite.afdesign  manifest.json
Data/: Configuration.ini  Paddle.yml
Docs/: Architecture.md
Engine/: CMakeLists.txt
Engine/Source/Core/: CMakeLists.txt
Engine/Source/Core/Private/: CommandRegistry.cpp  EngineContext.cpp  EventBus.cpp  Game.cpp  GameInstance.cpp  ResourceManager.cpp  ScreenManager.cpp
Engine/Source/Core/Private/Managers/: FileManager.cpp  GUIManager.cpp  ParticleConstellationManager.cpp  ResourceManager.cpp  ScreenManager.cpp
Engine/Source/Core/Private/UI/: Button.cpp  RoundedRectangleShape.cpp  Text.cpp  UIComponent.cpp  UIManager.cpp
Engine/Source/Core/Public/: Command.h  CommandRegistry.h  Configuration.h  EngineContext.h  EventBus.h  Game.h  GameInstance.h  GameState.h  Screen.h  ScreenManager.h
Engine/Source/Core/Public/Collections/: ParticleCollection.h
Engine/Source/Core/Public/Collections/GUI/: ButtonCollection.h
Engine/Source/Core/Public/Components/: AnimatorComponent.h
Engine/Source/Core/Public/Managers/: FileManager.h  GUIManager.h  ParticleConstellationManager.h  ResourceManager.h  ScreenManager.h
Engine/Source/Core/Public/UI/: Button.h  RoundedRectangleShape.h  Text.h  UIComponent.h  UIManager.h
Engine/Source/Utilities/: CMakeLists.txt
Engine/Source/Utilities/Private/: Logger.cpp
Engine/Source/Utilities/Public/: Constants.h  Logger.h  TimeTicker.h  Tween.h
SpaceInvaders/: CMakeLists.txt
SpaceInvaders/Assets/: manifest.json
SpaceInvaders/Assets/Shaders/: shader.frag
SpaceInvaders/Data/: Paddle.json
SpaceInvaders/Source/: CMakeLists.txt  Configuration.h  Main.cpp  SpaceInvaders.cpp  SpaceInvaders.h  SpaceInvadersState.h
SpaceInvaders/Source/Commands/: CommandId.h  ExitCommand.cpp  ExitCommand.h  PauseCommand.cpp  PauseCommand.h  PlayCommand.cpp  PlayCommand.h  QuitCommand.cpp  QuitCommand.h  ResumeCommand.cpp  ResumeCommand.h
SpaceInvaders/Source/Core/: CMakeLists.txt
SpaceInvaders/Source/Core/Private/: ResourceManager.cpp  Screen.cpp  ScreenManager.cpp
SpaceInvaders/Source/Core/Private/GUI/: Button.cpp  Clickable.cpp  Component.cpp  Text.cpp
SpaceInvaders/Source/Core/Private/Managers/: GUIManager.cpp  ParticleConstellationManager.cpp
SpaceInvaders/Source/Core/Private/Systems/: ParticleSystem.cpp  TextRenderer.cpp
SpaceInvaders/Source/Core/Public/: Command.h  Configuration.h  Entity.h  RenderableEntity.h  ResourceLoader.h  ResourceManager.h  Screen.h  ScreenManager.h  System.h
SpaceInvaders/Source/Core/Public/Collections/GUI/: ButtonCollection.h  TextCollection.h
SpaceInvaders/Source/Core/Public/Containers/: ParticleCollection.h
SpaceInvaders/Source/Core/Public/GUI/: Button.h  Clickable.h  Component.h  Text.h
SpaceInvaders/Source/Core/Public/Managers/: GUIManager.h  ParticleConstellationManager.h
SpaceInvaders/Source/Core/Public/Systems/: ParticleSystem.h  TextRenderer.h
SpaceInvaders/Source/GameScreen/: GameScreen.cpp  GameScreen.h
SpaceInvaders/Source/GameScreen/Collections/: BulletCollection.h  EnemyCollection.h
SpaceInvaders/Source/GameScreen/Entities/: Player.h  PlayerState.h
SpaceInvaders/Source/GameScreen/Renderers/: BulletCollectionRenderer.cpp  BulletCollectionRenderer.h
SpaceInvaders/Source/GameScreen/Systems/: BulletSpawnerSystem.cpp  BulletSpawnerSystem.h  BulletSystem.cpp  BulletSystem.h  EnemySystem.cpp  EnemySystem.h  PlayerController.cpp  PlayerController.h
SpaceInvaders/Source/PauseScreen/: PauseScreen.cpp  PauseScreen.h
SpaceInvaders/Source/Private/: SpaceInvaders.cpp
SpaceInvaders/Source/Private/Commands/: PlayCommand.cpp
SpaceInvaders/Source/Private/GameScreen/: GameScreen.cpp
SpaceInvaders/Source/Private/GameScreen/Systems/: BulletSystem.cpp  PlayerController.cpp
SpaceInvaders/Source/Public/: SpaceInvaders.h  SpaceInvadersState.h
SpaceInvaders/Source/Public/Commands/: ExitCommand.h
SpaceInvaders/Source/Public/GameScreen/: GameScreen.h
SpaceInvaders/Source/Public/GameScreen/Entities/: Player.h
SpaceInvaders/Source/Public/GameScreen/Systems/: PlayerController.h
SpaceInvaders/Source/Screens/: CMakeLists.txt
SpaceInvaders/Source/Screens/Private/: GameScreen.cpp  TitleScreen.cpp
SpaceInvaders/Source/Screens/Public/: GameScreen.h  TitleScreen.h
SpaceInvaders/Source/SpaceInvaders/: CMakeLists.txt
SpaceInvaders/Source/SpaceInvaders/Private/: SpaceInvaders.cpp
SpaceInvaders/Source/SpaceInvaders/Private/Commands/: ExitCommand.cpp  PlayCommand.cpp
SpaceInvaders/Source/SpaceInvaders/Private/GameScreen/: GameScreen.cpp
SpaceInvaders/Source/SpaceInvaders/Private/GameScreen/Systems/: PlayerController.cpp
SpaceInvaders/Source/SpaceInvaders/Private/Screens/: GameScreen.cpp  TitleScreen.cpp
SpaceInvaders/Source/SpaceInvaders/Private/TitleScreen/: TitleScreen.cpp
SpaceInvaders/Source/SpaceInvaders/Public/: GameState.h  SpaceInvaders.h
SpaceInvaders/Source/SpaceInvaders/Public/Commands/: ExitCommand.h  PlayCommand.h
SpaceInvaders/Source/SpaceInvaders/Public/Entities/: Paddle.h
SpaceInvaders/Source/SpaceInvaders/Public/GameScreen/: GameScreen.h
SpaceInvaders/Source/SpaceInvaders/Public/GameScreen/Collections/: BulletCollection.h  EnemyCollection.h
SpaceInvaders/Source/SpaceInvaders/Public/GameScreen/Containers/: Ball.h  Enemy.h
SpaceInvaders/Source/SpaceInvaders/Public/GameScreen/Entities/: Bullet.h  Player.h
SpaceInvaders/Source/SpaceInvaders/Public/GameScreen/Systems/: PlayerController.h
SpaceInvaders/Source/SpaceInvaders/Public/Screens/: GameScreen.h  TitleScreen.h
SpaceInvaders/Source/SpaceInvaders/Public/TitleScreen/: TitleScreen.h
SpaceInvaders/Source/TitleScreen/: TitleScreen.cpp  TitleScreen.h
SpaceInvaders/Source/Utils/: CMakeLists.txt
SpaceInvaders/Source/Utils/Private/: Logger.cpp
SpaceInvaders/Source/Utils/Public/: TimeTicker.h
SpaceInvaders/Tests/: CMakeLists.txt  PlayerControllerTests.cpp
src/: main.cpp
(+13 files in other folders)
